--- a/repositoryUserInterface/app/views/Application/device.html
+++ b/repositoryUserInterface/app/views/Application/device.html
@@ -64,7 +64,7 @@
 				$("#getDeviceErrorDiv").hide();
 
 				function createNewAccordion(accordionId)
-				 	{
+					 	{
 				 	$("#"+accordionId).accordion({
 					autoHeight : false,
 					active : -1,
@@ -128,7 +128,7 @@ $("#"+accordionId).append("<h2><a href=\"#\">" + deviceName + "  | " + deviceLoc
 
 				function createModifyButtons(parentId,removeDeviceButton,saveAsButton,editDeviceButton,index,urlDevicesOrTemplatesDelete)
 					{
-						alert(urlDevicesOrTemplatesDelete);
+						//alert(urlDevicesOrTemplatesDelete);
 						var isdevice=index==0?true:false;
 						if (index==0)
 						{
