Now does not unnecessarily bug with Speak

--- a/repositoryUserInterface/app/views/Application/editdevice.html
+++ b/repositoryUserInterface/app/views/Application/editdevice.html
@@ -41,7 +41,7 @@ lang="en">
 				var deleteDeviceOrTemplate;
 				var findDeviceOrTemplate;
 				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
-				alert(temp);
+				//alert(temp);
 				if(isDevice == "true") {
 					deleteDeviceOrTemplate = temp+URL_DELETE_DEVICE;
 					findDeviceOrTemplate = temp+URL_FIND_DEVICE;
