--- a/repositoryUserInterface/app/views/Application/speak.html
+++ b/repositoryUserInterface/app/views/Application/speak.html
@@ -12,8 +12,8 @@
 		<script src="@{'/public/js/libs/modernizr-2.0.6.min.js'}"></script>
 		<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/constants.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-		<script type="text/javascript"	src="@{'public/javascripts/swfobject.js'}"></script>
-		<script type="text/javascript" src="@{'/public/javascripts/recorder.js'}"></script>
+		<!--<script type="text/javascript"	src="@{'public/javascripts/swfobject.js'}"></script>-->
+		<!--<script type="text/javascript" src="@{'/public/javascripts/recorder.js'}"></script>-->
 		<script type="text/javascript" src="@{'/public/javascripts/utilityFunctions.js'}"></script>
 		<script type="text/javascript" src="@{'/public/javascripts/speakClient.js'}"></script>
 		
