--- a/repositoryUserInterface/app/views/Application/home.html
+++ b/repositoryUserInterface/app/views/Application/home.html
@@ -21,6 +21,7 @@
 							
 				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
 				setNavURL("#devices" ,'href',temp+URL_DEVICES);
+				setNavURL("#deviceactuate" ,'href',temp+URL_ACTUATE);
 				setNavURL("#visualization",'href',temp+URL_VISUALIZATION);
 				setNavURL("#repositoryInformation",'href',temp+URL_REPOSITORY_INFO);
 				setNavURL("#home",'href',temp+URL_HOME);
@@ -50,6 +51,9 @@
 						</li>
 						<li>
 							<a id="devices" >Devices</a>
+						</li>
+						<li>
+							<a id="deviceactuate"> Actuation</a>
 						</li>
 						<li>
 							<a id="visualization">Visualization</a>
